@@ -17,6 +17,8 @@ PHP                                                                        NEWS
   of true. (Tony)
 - Fixed bug #31797 (exif_read_data() uses too low nesting limit). (Ilia)
 - Fixed bug #31755 (Cannot create SOAP header in no namespace). (Dmitry)
+- Fixed bug #31747 (SOAP Digest Authentication doesn't work with 
+  "HTTP/1.1 100 Continue" response). (Dmitry)
 - Fixed bug #31732 (mb_get_info() causes segfault when no parameters 
   specified). (Tony)
 - Fixed bug #31710 (Wrong return values for mysqli_autocommit/commit/rollback).
